--- a/pruebaw2m/src/app/app.component.html
+++ b/pruebaw2m/src/app/app.component.html
@@ -1,2 +1,1 @@
-<input type="text" name="message" id="message">
-<input type="button" value="Send" (click)="setSuperHero()">
+<router-outlet></router-outlet>
