--- a/pruebaw2m/src/app/pages/home/home.html
+++ b/pruebaw2m/src/app/pages/home/home.html
@@ -1,11 +1,10 @@
 <div class="container mt-5 text-center">
   <div class="row">
     <div class="col">
-      <h1>Introduce un nuevo Super Heroe</h1>
-      <app-superhero-form></app-superhero-form>
+      <button class="btn btn-lg btn-primary" [routerLink]="['/create']" routerLinkActive="router-link-active" >Nuevo Super Heroe</button>
     </div>
   </div>
-  <div class="row">
+  <div class="row mt-5">
     <div class="col">
       <h1>SuperHeroes</h1>
       <ng-container *ngIf="(superHeros$ | async) as superHero">
@@ -14,10 +13,14 @@
           </thead>
           <tbody>
             <tr *ngFor="let item of superHero">
-              <td class="col-1 py-3 pointer">Editar</td>
-              <td class="col-10 py-3"><h3 class="mb-0">{{item}}</h3></td>
+              <td class="col-1 py-3 pointer">
+                <button mat-icon-button class="color-success" aria-label="add" >
+                  <mat-icon>edit</mat-icon>
+                </button>
+              </td>
+              <td class="col-10 py-3"><h3 class="mb-0">{{item.name}}</h3></td>
               <td class="col-1 py-2 pointer">
-                <button mat-icon-button color="warn" aria-label="add" (click)="openDialog(item)">
+                <button mat-icon-button color="warn" aria-label="add" >
                   <mat-icon>delete</mat-icon>
                 </button>
               </td>
