--- a/pruebaw2m/src/app/shared/components/superhero-form/superhero-form.component.html
+++ b/pruebaw2m/src/app/shared/components/superhero-form/superhero-form.component.html
@@ -23,7 +23,7 @@
     <div class="col"></div>
     <div class="col">
       <button type="submit" mat-icon-button color="primary" aria-label="add" [disabled]="!form.valid">
-        <mat-icon>add_circle_outline</mat-icon>
+        <mat-icon>{{button}}</mat-icon>
       </button>
     </div>
     <div class="col"></div>
