--- a/pruebaw2m/src/app/pages/home/home.html
+++ b/pruebaw2m/src/app/pages/home/home.html
@@ -10,14 +10,16 @@
         <div class="col-4"></div>
         <div class="col-4 mt-3"><h1>SuperHeroes</h1></div>
         <div class="col-4">
-          <mat-form-field appearance="outline">
-            <mat-label>Buscar</mat-label>
-            <input matInput placeholder="Buscar" [(ngModel)]="search"/>
-          </mat-form-field>
+          <form [formGroup]="form">
+            <mat-form-field appearance="outline">
+              <mat-label>Buscar</mat-label>
+              <input matInput placeholder="Buscar" formControlName="filter"/>
+            </mat-form-field>
+          </form>
         </div>
       </div>
 
-      <ng-container *ngIf="(superHeros$ | async | searchFilter: search) as superHero">
+      <ng-container *ngIf="(superHeros$ | async) as superHero">
         <table class="table table-hover table-bordered">
           <thead>
           </thead>
