--- a/pruebaw2m/src/app/pages/home/home.html
+++ b/pruebaw2m/src/app/pages/home/home.html
@@ -19,7 +19,7 @@
         </div>
       </div>
 
-      <ng-container *ngIf="(superHeros$ | async) as superHero">
+      <ng-container *ngIf="(superHeros$ | async | searchFilter: search) as superHero">
         <table class="table table-hover table-bordered">
           <thead>
           </thead>
@@ -39,6 +39,10 @@
             </tr>
           </tbody>
         </table>
+        <mat-paginator [length]="superHeroLength"
+              [pageSize]="5"
+              (page)="pageEvent = getServerData($event)">
+        </mat-paginator>
       </ng-container>
 
     </div>
