Using pipes in service

--- a/pruebaw2m/src/app/pages/home/home.html
+++ b/pruebaw2m/src/app/pages/home/home.html
@@ -7,9 +7,9 @@
   <div class="row mt-5">
     <div class="col">
       <div class="row">
-        <div class="col-4"></div>
-        <div class="col-4 mt-3"><h1>SuperHeroes</h1></div>
-        <div class="col-4">
+        <div class="col-xs-12 col-sm-4"></div>
+        <div class="col-xs-12 mt-3 col-sm-4"><h1>SuperHeroes</h1></div>
+        <div class="col-xs-12 col-sm-4">
           <form [formGroup]="form">
             <mat-form-field appearance="outline">
               <mat-label>Buscar</mat-label>
