Finish store (reducers and actions)

--- a/pruebaw2m/src/app/shared/components/superhero-form/superhero-form.component.html
+++ b/pruebaw2m/src/app/shared/components/superhero-form/superhero-form.component.html
@@ -4,7 +4,7 @@
     <div class="col">
       <mat-form-field appearance="outline">
         <mat-label>Nombre SuperHeroe</mat-label>
-        <input formControlName="name" id="name" matInput placeholder="Nombre" #superHero.name [(ngModel)]="superHero.name">
+        <input formControlName="name" id="name" matInput placeholder="Nombre" #superHero.name>
       </mat-form-field>
     </div>
     <div class="col"></div>
@@ -14,7 +14,7 @@
     <div class="col">
       <mat-form-field appearance="outline">
         <mat-label>Descripcion SuperHeroe</mat-label>
-        <input matInput placeholder="Descripcion" #superHero.description formControlName="description" [(ngModel)]="superHero.description">
+        <input matInput placeholder="Descripcion" #superHero.description formControlName="description">
       </mat-form-field>
     </div>
     <div class="col"></div>
