--- a/pruebaw2m/src/app/pages/create-edit-super-hero/create-edit-super-hero.html
+++ b/pruebaw2m/src/app/pages/create-edit-super-hero/create-edit-super-hero.html
@@ -10,5 +10,7 @@
     </div>
     <div class="col"></div>
   </div>
-  <app-superhero-form (nameEvent)="addSuperHero($event)" [superHero]="superHero"></app-superhero-form>
+  <app-superhero-form *ngIf="superHero" (nameEvent)="addSuperHero($event)" [superHero]="superHero"></app-superhero-form>
+  <div *ngIf="!superHero" class="spinner-border text-secondary" role="status">
+  </div>
 </div>
